--- a/Authentication/public/index.html
+++ b/Authentication/public/index.html
@@ -43,132 +43,14 @@
 			</div>
 		</nav>
 
-
-<div id="root"></div>
-<div class = "main" style="margin-top: 200px;"></div><br>
-<div class = "verifyEmail"></div>
-
-<!-- Overlay to show loading icon -->
-<div id="overlay">
-	<div id="loader"><img src="assets/loader2.gif" style="width: 70px;height: 70px;"></div>
-</div>
-
-<!--Div for adding admins-->
-	<div id="modal-admin" class="visuallyhidden grey lighten-2" style="
-	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);transition: 0.3s;
-	text-align: center;width: 1000px;height: 550px;top:0;bottom: 0;left: 0;right: 0;margin: auto;
-	">
-			<div class="center-align">
-				<br /><br />
-				<h4>Add an Admin</h4><br />
-			</div>
-		<form class="center-align admin-actions container" style="margin:40px auto;max-width: 500px;">
-			<div class="input-field">
-				<input type="email" id="admin-email" autocomplete="off" required />
-			<label for="signup-email">Email address</label>
-			</div><button class="btn #263238 blue-grey darken-4 z-depth-0">Make Admin</button>
-			<br>
-			<div class="admin-loading">
-			</div>
-		</form>
+	<!-- Overlay to show loading icon -->
+	<div id="overlay">
+		<div id="loader"><img src="assets/loader2.gif" style="width: 70px;height: 70px;"></div>
 	</div>
 
+	<div id="root"></div>
 
-
-
-	<!-- Div for signup-->
-		<div id="modal-signup" class="visuallyhidden grey lighten-2" style="
-		box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);transition: 0.3s;
-		text-align: center;width: 1000px;height: 625px;top:0;bottom: 0;left: 0;right: 0;margin: auto;
-		">
-		<div class="container">
-			<br />
-			<h4>Sign up</h4>
-			<form id="signup-form">
-				<div class="input-field">
-				<input type="email" id="signup-email" autocomplete="off" required />
-				<label for="signup-email">Email address</label>
-				</div>
-				<div class="input-field">
-				<input type="password" id="signup-password" autocomplete="off" required />
-				<label for="signup-password">Choose password</label>
-				</div>
-				<div class="input-field">
-				<input type="password" id="signup-confirm-password" autocomplete="off" required />
-				<label for="signup-confirm-password">Confirm password</label>
-				</div>
-				<div class="password-match"></div>
-				<div class="input-field">
-				<input type="text" id="signup-bio" autocomplete="off" required />
-				<label for="signup-bio">Write about yourself..</label>
-				</div>	
-				<div class="image-preview">
-					<img src="assets/user2.png">
-				</div>
-				<div class="file-field input-field">
-					<div class="btn">
-					  <span>upload Image</span>
-					  <input type="file" onchange="loadFile(event)" accept="image/x-png,image/gif,image/jpeg" id="signup-file">
-					</div>
-					<div class="file-path-wrapper">
-					  <input class="file-path validate" type="text">
-					</div>
-					<!-- <div class="image-preview"></div> -->
-				</div>
-				<div class="center-align">
-					<button class="btn #263238 blue-grey darken-4 z-depth-0"  >Sign up</button>
-				</div>
-			</form>
-		</div>
-		</div>
-
-
-	<!--Div for login-->
-		<div id="modal-login" class="visuallyhidden grey lighten-2" style="
-		box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);transition: 0.3s;
-		text-align: center;width: 1000px;height: 550px;top:0;bottom: 0;left: 0;right: 0;margin: auto;
-		">
-			<br /><br />
-			<h4>Login</h4><br />
-			<div class="container center-align">
-			<form id="login-form">
-				<div class="input-field">
-				<input type="email" id="login-email" autocomplete="off" required />
-				<label for="login-email">Email address</label>
-				</div>
-				<div class="input-field">
-				<input type="password" id="login-password" autocomplete="off" required />
-				<label for="login-password">Your password</label>
-				</div>
-				<button class="btn #263238 blue-grey darken-4 z-depth-0">Login</button>
-				<br><br>
-				<div style="text-align: right">
-					<a class="waves-effect waves-red btn-flat modal-trigger" data-target="modal-forgot">Forgot Password?</a>
-				</div>
-				<div class="login-loading">
-				</div>
-			</form>
-		</div>
-		</div>
-
-
-	<!--Div to show account details-->
-		<div id="modal-account" class="visuallyhidden grey lighten-2" style="
-		box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);transition: 0.3s;
-		text-align: center;width: 1000px;height: 550px;top:0;bottom: 0;left: 0;right: 0;margin: auto;
-		">
-			<div class="center-align container">
-				<br /><br />
-			<h4>Account Details</h4><br />
-			<div class="uploadedImage">
-			</div>
-			<div class="bio"></div>
-			<div class="account-details"></div>
-			</div>
-		</div>
-	
-
-	<!--Div to show forgot password-->
+	<!--Modal to show forgot password-->
 		<div id="modal-forgot" class="modal grey lighten-2" >
 			<div class = "modal-content center-align">
 				<br /><br />
@@ -184,6 +66,41 @@
 			<div class="forgot-loading"></div>
 		</div>
 
+	<!--Modal to show edit bio-->
+		<div id="modal-edit-bio" class="modal grey lighten-2" >
+			<div class = "modal-content center-align">
+				<br /><br />
+				<h4>Write about yourself..</h4><br />
+				<form id="edit-bio-form">
+					<div class="input-field">
+						<input type="text" id="edit-bio" autocomplete="off" required />
+						<label for="forgotPass-email">Bio</label>
+					</div>
+				<button class="btn #263238 blue-grey darken-4 z-depth-0">Submit</button>
+				</form>
+			</div>
+		</div>
+
+	<!--Modal to show edit image-->
+		<div id="modal-edit-img" class="modal grey lighten-2" >
+			<div class = "modal-content center-align">
+				<br /><br />
+				<h4>Write about yourself..</h4><br />
+				<div class="image-preview">
+					<img src="assets/user2.png">
+				</div>
+				<div class="file-field input-field">
+					<div class="btn">
+						<span>upload Image</span>
+						<input type="file" onchange="loadFile(event)" accept="image/x-png,image/gif,image/jpeg" id="signup-file">
+					</div>
+					<div class="file-path-wrapper">
+						<input class="file-path validate" type="text">
+					</div>
+					<!-- <div class="image-preview"></div> -->
+				</div>
+			</div>
+		</div>
 	
 	<!--Firebase SDK-->
 		<script src="https://www.gstatic.com/firebasejs/7.6.1/firebase-app.js"></script>
@@ -214,8 +131,9 @@
   <!--External and internal scripts-->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	<script src="scripts/router.js"></script>
+	<script src="scripts/templates.js"></script>
 	<script src="scripts/auth.js"></script>
 	<script src="scripts/index.js"></script>
+	
 </body>
 </html>
